Really fix Service Manager interface filter leaks

Move the important code from the destructor to the constructor, because,
well, it's not very useful in the destructor.

BUG=729593

Change-Id: I12e24839c936cd3bf37c9d2b73a721fd2ab59377
Reviewed-on: https://chromium-review.googlesource.com/524138
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477006}
Former-commit-id: 81e5ea73c5f350996f1d03a623098f0638a330cb